stateless-poc-I/haproxy/haproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-deployment
spec:
  selector:
    matchLabels:
      app: haproxy
  replicas: 1
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      hostAliases:
      - ip: "10.100.136.0"
        hostnames: 
        - "sso.enmk8s.athtem.eei.ericsson.se" 
        - "iorfile.enmk8s.athtem.eei.ericsson.se"
      - ip: "10.109.168.161"
        hostnames:
        - "sso-instance-1.enmk8s.athtem.eei.ericsson.se"
        - "bar.remote"      
      - ip: "10.102.145.169"
        hostnames:
        - "httpd-instance-1" 
      containers:
      - name: haproxy
        image: dockerregistry:5000/haproxy
        ports:
          - containerPort: 80
          - containerPort: 443
          - containerPort: 22
          - containerPort: 123
          - containerPort: 8666
          - containerPort: 4447
          - containerPort: 8080
        command: ["/bin/bash"]
        args: ["-c","while true; do sleep 10;done"]
        volumeMounts:
          - name: data
            mountPath: /ericsson/tor/data
          - name: mdt
            mountPath: /etc/opt/ericsson/ERICmodeldeployment      
          - name: home
            mountPath: /home/shared
          - name: custom
            mountPath: /ericsson/custom
          - name: dumps
            mountPath: /ericsson/enm/dumps
          - name: dlms
            mountPath: /ericsson/enm/dlms/history/data
          - name: batch
            mountPath: /ericsson/batch
          - name: norollback
            mountPath: /ericsson/no_rollback
          - name: smrs
            mountPath: /ericsson/tor/smrs
          - name: alex
            mountPath: /ericsson/enm/alex
      volumes:
        - name: data
          nfs:
            server: nfsdata
            path: "/ericsson/data"
        - name: dumps
          nfs:
            server: nfshcdumps
            path: "/ericsson/hcdumps"
        - name: mdt
          nfs:
            server: nfsmdt
            path: "/ericsson/mdt"
        - name: home
          nfs:
            server: nfshome
            path: "/ericsson/home"
        - name: custom
          nfs:
            server: nfscustom
            path: "/ericsson/custom"
        - name: dlms
          nfs:
            server: nfsdlms
            path: "/ericsson/dlms"
        - name: batch
          nfs:
            server: nfsbatch
            path: "/ericsson/batch"
        - name: norollback
          nfs:
            server: nfsnorollback
            path: "/ericsson/no_rollback"
        - name: smrs
          nfs:
            server: nfssmrs
            path: "/ericsson/smrs"
        - name: alex
          nfs:
            server: nfsalex
            path: "/ericsson/alex"
