stateless-poc-I/haproxy/haproxy-ingress-ejb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: haproxy-ejb
spec:
  rules:
  - host: haproxy-deployment-cc889788b-wgrvq
    http:
      paths:
      - path: /
        backend:
          serviceName: haproxy
          servicePort: 4447
