stateless-poc-I/haproxy/haproxy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: haproxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: enmk8s.athtem.eei.ericsson.se
    http:
      paths:
      - path: /
        backend:
          serviceName: haproxy
          servicePort: 443
  tls:
  - hosts:
    - enmk8s.athtem.eei.ericsson.se
